notification-mq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: notification-mq
  name: notification-mq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-mq
  template:
    metadata:
      labels:
        app: notification-mq
    spec:
      containers:
        - image: rabbitmq
          name: rabbitmq
          ports:
            - containerPort: 5672
          resources:
            limits:
              cpu: 100m
