react-web-app-deployment.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: react-web-app
  name: react-web-app
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: react-web-app
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      labels:
        app: react-web-app
    spec:
      containers:
      - env:
        - name: notification
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: react-web-app-runtime
        imagePullPolicy: IfNotPresent
        name: react-web-app-runtime
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
    metadata:
      labels:
        app: react-web-app
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - react-web-app-runtime
        from:
          kind: ImageStreamTag
          name: 'react-web-app-runtime:latest'
