notification-db-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: notification-db
  name: notification-db
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: notification-db
