notification-mq-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: notification-mq
  name: notification-mq
spec:
  ports:
    - port: 5672
  selector:
    app: notification-mq
