react-web-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: react-web-app
  name: react-web-app
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: react-web-app
